# ros2tcp-edgeAI

./: .gitignore  README.md
dev_ws/face_detection_msg/: package.xml
dev_ws/face_detection_tcp/: CMakeLists.txt  package.xml
dev_ws/face_detection_tcp/src/: face_detection_tcp.cpp
dev_ws/pose_estimation_msg/: package.xml
dev_ws/pose_estimation_tcp/: CMakeLists.txt  package.xml
dev_ws/pose_estimation_tcp/src/: pose_estimation_tcp.cpp
dev_ws/video_sender/: CMakeLists.txt  package.xml
dev_ws/video_sender/src/: video_pub.cpp
src/face_detection_msg/: CMakeLists.txt  package.xml
src/face_detection_msg/msg/: FaceDetectionResult.msg  Result.msg
src/face_detection_tcp/: package.xml
src/face_detection_tcp/src/: face_detection_tcp.cpp
src/pose_estimation_msg/: CMakeLists.txt  package.xml
src/pose_estimation_msg/msg/: Point.msg  PoseEstimationResult.msg  Result.msg
src/pose_estimation_tcp/: package.xml
src/pose_estimation_tcp/src/: pose_estimation_tcp.cpp
src/video_sender/: package.xml
src/video_sender/src/: video_pub.cpp
