<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_estimation_tcp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="11eisuke88@gmail.com">xilinx</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pose_estimation_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
